Port Create compat mixins, gametests and data pack layout to 1.20.1
- Create 6.0.8 APIs: LazyOptional capabilities, NBT block positions, 1.20.1 schematic packet lambda,
  SmartBlockEntity write/read without registries, AirCurrent call sites for FanProcessingType.getAt
- gametests: GameTestInfo rotation/bounds via AT, isSameItemSameTags
- data/ folders back to 1.20.1's plural names (structures, tags/blocks, ...); pack.mcmeta
- c: convention tags made optional with forge: equivalents; 1.21-only ids made optional
  (scripts/check_tags.py)

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SwpTzQJLcFWbn1oizFRnf3